materializer-focused-error.txt
run=https://github.com/szl-holdings/a11oy/actions/runs/29945819133
head=08dac27693e103c9e797abe93d01c57db7ab207d
exit=1
--- focused failure tail ---
  File "tests/test_operational_route_contracts.py", line 85
    "RELOCK_ISSUE: "1043"",
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
